fix filter :after remove global abuse update readme.md preview and screenshot
Signed-off-by: gnounc <gnounc@zanzibar.outerheaven>

--- a/main.css
+++ b/main.css
@@ -29,7 +29,8 @@ tr:nth-child(even)
 
 th:after
 {
-	content: "  | ";
+	content: "  |▼";
+	color: #000;
 }
 
 
@@ -60,12 +61,14 @@ th.desc:hover:after
 th.asc:after
 {
 	content: "  |▲";
+	color: #fff;
 }
 
 
 th.desc:after
 {
 	content: "  |▼";
+	color: #fff;
 }
 
 
